Selection extend() should trigger exception with no ranges https://bugs.webkit.org/show_bug.cgi?id=232420

Patch by Brandon Stewart <brandonstewart@apple.com> on 2021-10-30
Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

Verify extend() will throw an exception when the Selection object
contains no Range objects. Chrome and Firefox will also throw an
exception in this scenario.

https://w3c.github.io/selection-api/#dom-selection-extend

* web-platform-tests/selection/extend-exception-expected.txt: Added.
* web-platform-tests/selection/extend-exception.html: Added.

Source/WebCore:

The 'extend' method in the Selection API should throw an exception upon
being called if there are no ranges present in the Selection object.

https://w3c.github.io/selection-api/#dom-selection-extend

Test: imported/w3c/web-platform-tests/selection/extend-exception.html

* page/DOMSelection.cpp:
(WebCore::DOMSelection::extend):

LayoutTests:

Resolve errors in test cases introduced by new exception being thrown by extend()
when no ranges are present.

* editing/execCommand/null_calc_primitive_value_for_css_property.html:
* editing/execCommand/transpose-backslash-with-euc.html:
* editing/inserting/insert-html-crash-02.html:
* editing/selection/DOMSelection-crossing-document-expected.txt:
* editing/selection/DOMSelection-crossing-document.html:


Canonical link: https://commits.webkit.org/243726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285084 268f45cc-cd09-0410-ab3c-d52691b4dbfc